welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
    for (machin <- 0 to 5){
                ^